/*
MIT License
Copyright(c) 2022 Futurewei Cloud
    Permission is hereby granted,
    free of charge, to any person obtaining a copy of this software and associated documentation files(the "Software"), to deal in the Software without restriction,
    including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and / or sell copies of the Software, and to permit persons
    to whom the Software is furnished to do so, subject to the following conditions:
    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/
syntax="proto3";
package ntest;
option go_package = "github.com/futurewei-cloud/merak/api/proto/v1/ntest;ntest";
import "common.proto";

service MeraknTestService {
    rpc TestHandler (InternalTestConfiguration) returns (ReturnTestMessage) {}
}

message InternalTestConfiguration {
    common.OperationType operation_type = 1;
    repeated InternalVMTestInfo vms = 2;
}

//Input

enum TestType {
  PING = 0;
}

message InternalVMHost {
    string id = 1;
    int32 port = 2;
}


message InternalVMTestInfo {
    InternalVMHost src = 1;
    InternalVMHost dest = 2;
    TestType test_type = 3;
}

//Output
message InternalVMHostInfo {
    string id = 1;
    string name = 2;
    string ip = 3;
    int32 port = 4;
    string host = 5;
}

message InternalVMTestResult {
    InternalVMHostInfo src = 1;
    InternalVMHostInfo dest = 2;
    TestType test_type = 3;
    TestStatus status = 4;
}

enum TestStatus {
  RUNNING = 0;
  PASSED = 1;
  FAILED = 2;
}


message ReturnTestMessage {
    common.ReturnCode return_code = 1;
    string return_message = 2;
    repeated InternalVMTestResult results = 3;
}
